Added keyboard shortcuts modifier keys setting. More UI fixes